--- a/config.gradle
+++ b/config.gradle
@@ -3,6 +3,14 @@ import java.util.regex.Matcher
 import java.util.regex.Pattern
 
 ext {
+    // 上传bintray的配置
+    bintray = [
+            groupId       : "com.excellence",
+            publishVersion: "1.0.0",
+            website       : "https://github.com/VeiZhang",
+            licences      : ['Apache-2.0']
+    ]
+
     // 插件
     plugins = [
             application      : "com.android.application",
@@ -11,7 +19,8 @@ ext {
             bintray          : "com.jfrog.bintray",
             novoda           : "com.novoda.bintray-release",
             greendao         : "org.greenrobot.greendao",
-            "greendao-gradle": "org.greenrobot:greendao-gradle-plugin:3.2.2"
+            "greendao-gradle": "org.greenrobot:greendao-gradle-plugin:3.2.2",
+            "safeargs"       : "androidx.navigation.safeargs"
     ]
 
     // 配置
@@ -25,7 +34,15 @@ ext {
             versionName             : getVersionName(),
 
             /*************************自定义配置*************************/
-            androidSupportSdkVersion: "28.0.0"
+            androidSupportSdkVersion: "28.0.0",
+            navigationVersion       : "2.1.0",
+
+            retrofit2               : "2.6.2",
+            leakcanary              : "2.5",
+            exoplayer               : "2.13.3",
+            ffmpeg                  : "1.2.2",
+            "imageloader"           : "1.0.0",
+            "glide"                 : "4.11.0"
     ]
 
     // 依赖
@@ -63,57 +80,100 @@ ext {
 
             /*************************第三方依赖*************************/
             // https://github.com/square/retrofit
-            "retrofit2"                         : "com.squareup.retrofit2:retrofit:2.4.0",
-            "converter-scalars"                 : "com.squareup.retrofit2:converter-scalars:2.4.0",
-            "converter-gson"                    : "com.squareup.retrofit2:converter-gson:2.4.0",
-            "adapter-rxjava"                    : "com.squareup.retrofit2:adapter-rxjava:2.4.0",
-            "adapter-rxjava2"                   : "com.squareup.retrofit2:adapter-rxjava2:2.4.0",
+            "retrofit2"                         : "com.squareup.retrofit2:retrofit:${android["retrofit2"]}",
+            "converter-scalars"                 : "com.squareup.retrofit2:converter-scalars:${android["retrofit2"]}",
+            "converter-gson"                    : "com.squareup.retrofit2:converter-gson:${android["retrofit2"]}",
+            "adapter-rxjava"                    : "com.squareup.retrofit2:adapter-rxjava:${android["retrofit2"]}",
+            "adapter-rxjava2"                   : "com.squareup.retrofit2:adapter-rxjava2:${android["retrofit2"]}",
             // https://github.com/square/okhttp
-            "okhttp"                            : "com.squareup.okhttp3:okhttp:3.11.0",
+            "okhttp"                            : "com.squareup.okhttp3:okhttp:4.2.1",
+            "okhttp-logging"                    : "com.squareup.okhttp3:logging-interceptor:4.2.1",
             // https://github.com/greenrobot/greenDAO
             "greendao"                          : "org.greenrobot:greendao:3.2.2",
             // https://github.com/yuweiguocn/GreenDaoUpgradeHelper
-            "greendao-helper"                   : "com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.1.0",
+            "greendao-helper"                   : "io.github.yuweiguocn:GreenDaoUpgradeHelper:2.2.1",
             // https://github.com/bumptech/glide
-            "glide"                             : "com.github.bumptech.glide:glide:4.8.0",
+            "glide"                             : "com.github.bumptech.glide:glide:${android["glide"]}",
+            "glide-compiler"                    : "com.github.bumptech.glide:compiler:${android["glide"]}",
+            "glide-okhttp"                      : "com.github.bumptech.glide:okhttp3-integration:${android["glide"]}",
             // https://github.com/square/picasso
             "picasso"                           : "com.squareup.picasso:picasso:2.71828",
             // https://github.com/facebook/fresco
-            "fresco"                            : "com.facebook.fresco:fresco:1.10.0",
+            "fresco"                            : "com.facebook.fresco:fresco:2.0.0",
             // https://github.com/greenrobot/EventBus
             "eventbus"                          : "org.greenrobot:eventbus:3.1.1",
             // https://github.com/BuglyDevTeam/Bugly-Android
-            "bugly"                             : "com.tencent.bugly:crashreport:2.6.6.1",
-            "bugly-native"                      : "com.tencent.bugly:nativecrashreport:3.3.1",
+            "bugly"                             : "com.tencent.bugly:crashreport:3.0.0",
+            "bugly-native"                      : "com.tencent.bugly:nativecrashreport:3.7.1",
             // https://bintray.com/android/android-utils/com.android.volley.volley
             "volley"                            : "com.android.volley:volley:1.1.1",
             // https://github.com/ReactiveX/RxJava
             "rxjava"                            : "io.reactivex:rxjava:1.3.8",
-            "rxjava2"                           : "io.reactivex.rxjava2:rxjava:2.2.3",
-            "rxandroid"                         : "io.reactivex:rxandroid:2.1.0",
-            "rxandroid2"                        : 'io.reactivex.rxjava2:rxandroid:2.1.0',
+            "rxjava2"                           : "io.reactivex.rxjava2:rxjava:2.2.9",
+            "rxandroid"                         : "io.reactivex:rxandroid:2.1.1",
+            "rxandroid2"                        : 'io.reactivex.rxjava2:rxandroid:2.1.1',
             // https://github.com/JakeWharton/RxBinding
-            "rxbinding"                         : 'com.jakewharton.rxbinding2:rxbinding:2.2.0',
+            "rxbinding"                         : 'com.jakewharton.rxbinding3:rxbinding-leanback:3.0.0',
             // https://github.com/google/gson
             "gson"                              : "com.google.code.gson:gson:2.8.5",
             // https://github.com/alibaba/fastjson
             "fastjson"                          : "com.alibaba:fastjson:1.1.70.android",
             // https://github.com/apache/commons-lang
-            "commons-lang3"                     : "org.apache.commons:commons-lang3:3.8",
+            "commons-lang3"                     : "org.apache.commons:commons-lang3:3.9",
+            // https://github.com/apache/commons-net
+            "commons-net"                       : "commons-net:commons-net:3.8.0",
             // https://github.com/square/leakcanary
-            "leakcanary"                        : "com.squareup.leakcanary:leakcanary-android:1.6.2",
-            "leakcanary-release"                : "com.squareup.leakcanary:leakcanary-android-no-op:1.6.2",
-            "leakcanary-fragment"               : "com.squareup.leakcanary:leakcanary-support-fragment:1.6.2",
+            "leakcanary"                        : "com.squareup.leakcanary:leakcanary-android:${android["leakcanary"]}",
             // https://github.com/YoKeyword/Fragmentation
-            "fragmentation"                     : "me.yokeyword:fragmentation:1.3.6",
+            "fragmentation"                     : "me.yokeyword:fragmentation:1.3.7",
+            // https://github.com/DreaminginCodeZH/MaterialRatingBar
+            "materialratingbar"                 : "me.zhanghai.android.materialratingbar:library:1.3.2",
             // https://github.com/airbnb/lottie-android，2.8.0+是为了兼容AndroidX，没有用到AndroidX，则使用版本2.7.0，否则莫名其妙会报错
             "lottie"                            : "com.airbnb.android:lottie:2.7.0",
+            // https://github.com/google/ExoPlayer，2.8.4+是为了兼容AndroidX
+            "exoplayer"                         : "com.google.android.exoplayer:exoplayer:${android["exoplayer"]}",
+            "exoplayer-core"                    : "com.google.android.exoplayer:exoplayer-core:${android["exoplayer"]}",
+            "exoplayer-dash"                    : "com.google.android.exoplayer:exoplayer-dash:${android["exoplayer"]}",
+            "exoplayer-hls"                     : "com.google.android.exoplayer:exoplayer-hls:${android["exoplayer"]}",
+            "exoplayer-smoothstreaming"         : "com.google.android.exoplayer:exoplayer-smoothstreaming:${android["exoplayer"]}",
+            "exoplayer-ui"                      : "com.google.android.exoplayer:exoplayer-ui:${android["exoplayer"]}",
+            "exoplayer-extension-ima"           : "com.google.android.exoplayer:extension-ima:${android["exoplayer"]}",
+            "exoplayer-extension-rtmp"          : "com.google.android.exoplayer:extension-rtmp:${android["exoplayer"]}",
+            "exoplayer-extension-gvr"           : "com.google.android.exoplayer:extension-gvr:${android["exoplayer"]}",
+            "exoplayer-extension-mediasession"  : "com.google.android.exoplayer:extension-mediasession:${android["exoplayer"]}",
+            "exoplayer-extension-okhttp"        : "com.google.android.exoplayer:extension-okhttp:${android["exoplayer"]}",
+            "exoplayer-extension-cast"          : "com.google.android.exoplayer:extension-cast:${android["exoplayer"]}",
+            "exoplayer-extension-cronet"        : "com.google.android.exoplayer:extension-cronet:${android["exoplayer"]}",
+            "exoplayer-extension-leanback"      : "com.google.android.exoplayer:extension-leanback:${android["exoplayer"]}",
+            "exoplayer-extension-jobdispatcher" : "com.google.android.exoplayer:extension-jobdispatcher:${android["exoplayer"]}",
+            "exoplayer-extension-workmanager"   : "com.google.android.exoplayer:extension-workmanager:${android["exoplayer"]}",
+            // https://github.com/zaclimon/Tsutaeru
+            "xipl"                              : "com.zaclimon:xipl:0.2.2",
+            "tiflibrary"                        : "com.zaclimon:tiflibrary:0.2.2",
+            // https://github.com/SufficientlySecure/html-textview
+            "html-text"                         : "org.sufficientlysecure:html-textview:3.9",
+            // https://developers.google.com/youtube/android/player
+            // https://github.com/bertrandmartel/youtubetv.git
+            // https://github.com/VeiZhang/youtubetv
+            "youtubetv"                         : "com.excellence:youtubetv:1.0.3-RC1",
+            "smarttube"                         : "com.excellence:smarttube:1.0.0",
+            // https://github.com/averyzhong/SubtitleForAndroid
+            // https://github.com/VeiZhang/SubtitleForAndroid
+            "android-external-subtitle"         : "com.excellence:subtitle:1.0.1",
+
+            "upgrader"                          : "com.excellence:upgrader:1.1.9",
+            "upgrader-pure"                     : "com.excellence:upgrader-pure:1.1.9",
+            "autodispose"                       : "com.uber.autodispose:autodispose:0.6.1",
+            "autodispose-android-arch"          : "com.uber.autodispose:autodispose-android-archcomponents:0.6.1",
+            "zxing-core"                        : "com.google.zxing:core:3.4.1",
+            "opensubtitle"                      : "com.github.wtekiela:opensub4j:0.4.0",
+            "xml-apis"                          : "xml-apis:xml-apis:2.0.2",
 
             /*************************个人依赖*************************/
             // https://github.com/VeiZhang/BaseToolsLibrary
-            "basetools"                         : "com.excellence:basetools:1.2.6",
+            "basetools"                         : "com.excellence:basetools:1.2.9-RC3",
             // https://github.com/VeiZhang/Permission
-            "permission"                        : "com.excellence:permission:1.0.1",
+            "permission"                        : "com.excellence:permission:1.0.2",
             // https://github.com/VeiZhang/RetrofitClient
             "retrofit-client"                   : "com.excellence:retrofit:1.0.5",
             "retrofit-client2"                  : "com.excellence.retrofit:retrofit2:2.0.0",
@@ -128,14 +188,35 @@ ext {
             // https://github.com/VeiZhang/AppStatistics
             "app-statistics"                    : "com.excellence:app-statistics:1.0.1",
             // https://github.com/VeiZhang/AndroidExec
-            "exec"                              : "com.excellence:exec:1.1.1",
+            "exec"                              : "com.excellence:exec:1.1.2",
             // https://github.com/VeiZhang/AndroidFFmpeg
-            "ffmpeg"                            : "com.excellence:ffmpeg:1.1.0",
+            "ffmpeg"                            : "com.excellence:ffmpeg:${android["ffmpeg"]}",
+            "ffmpeg-java"                       : "com.excellence:ffmpeg-java:${android["ffmpeg"]}",
+            "ffmpeg-armeabi"                    : "com.excellence:ffmpeg-armeabi:${android["ffmpeg"]}",
+            "ffmpeg-armv7a"                     : "com.excellence:ffmpeg-armv7a:${android["ffmpeg"]}",
+            "ffmpeg-x86"                        : "com.excellence:ffmpeg-x86:${android["ffmpeg"]}",
             // https://github.com/VeiZhang/ImageLoader
-            "imageloader"                       : "com.excellence:imageloader:1.0.0",
-            "imageloader-fresco"                : "com.excellence:imageloader-fresco:1.0.0",
-            "imageloader-picasso"               : "com.excellence:imageloader-picasso:1.0.0",
-            "imageloader-glide"                 : "com.excellence:imageloader-glide:1.0.0"
+            "imageloader"                       : "com.excellence:imageloader:${android["imageloader"]}",
+            "imageloader-fresco"                : "com.excellence:imageloader-fresco:${android["imageloader"]}",
+            "imageloader-picasso"               : "com.excellence:imageloader-picasso:${android["imageloader"]}",
+            "imageloader-glide"                 : "com.excellence:imageloader-glide:${android["imageloader"]}",
+            // http://192.168.1.239/common_library/timeshift
+            "timeshift"                         : "com.excellence:timeshift:2.0.3",
+            // https://github.com/orhanobut/logger
+            "logger"                            : "com.orhanobut:logger:2.2.0",
+            "work"                              : "androidx.work:work-runtime:2.3.3",
+            "work-rxjava2"                      : "androidx.work:work-rxjava2:2.3.3",
+            "guava"                             : "com.google.guava:guava:28.1-android",
+            // https://github.com/Dimezis/BlurView
+            "blurview"                          : "com.eightbitlab:blurview:1.6.3",
+            // https://github.com/SufficientlySecure/html-textview
+            "html-textview"                     : "org.sufficientlysecure:html-textview:3.9",
+            // https://github.com/VeiZhang/DIY-EpgView (Discard)
+            "diy-epgview"                       : "com.excellence:diy-epgview:1.0.2",
+            // http://192.168.1.239/widget/LeanbackEpgView (Discard)
+            "leanbackepgview"                   : "com.excellence:leanback-epgview:1.0",
+            // http://192.168.1.239/widget/epgview
+            "epgview"                           : "com.excellence:epgview:2.3"
     ]
 }
 
@@ -194,12 +275,12 @@ def getVersionCode() {
 /***********************读取Git信息***********************/
 
 /**
- * 读取最近的一次git tag
+ * 读取当前分支最近的一次git tag
  * @return tag
  */
 def getGitTag() {
     try {
-        def process = ("git describe --abbrev=0 --tags origin").execute()
+        def process = ("git describe --abbrev=0 --tags").execute()
         def tag = process.text.trim()
         return tag
     } catch (e) {
