--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -12,4 +12,4 @@ dependencies {
 }
 
 //apply from: 'bintray.gradle' /** gradle 3.5.0 <-> 5.4.1 使用 **/
-apply from: 'github_package_publish.gradle'
+apply from: 'github_package_publish_usage.gradle'
