--- a/basetoolslibrary/build.gradle
+++ b/basetoolslibrary/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     implementation libs["leanback"]
     implementation libs["kotlin-stdlib"]
     implementation libs["core-ktx"]
+    implementation libs["kt-coroutines-android"]
+    implementation libs["kt-coroutines-core"]
     implementation libs["rxjava2"]
     implementation libs["rxandroid2"]
     implementation libs["androidx-lifecycle-extensions"]
