--- a/basetoolslibrary/github_package_publish_usage.gradle
+++ b/basetoolslibrary/github_package_publish_usage.gradle
@@ -1,4 +1,5 @@
-apply from: 'https://gist.githubusercontent.com/VeiZhang/aebbbd6d9d570dffac81eea80cdcda0a/raw/github_package_publish.gradle'
+// apply from: 'https://gist.githubusercontent.com/VeiZhang/aebbbd6d9d570dffac81eea80cdcda0a/raw/github_package_publish.gradle'
+apply from: 'github_package_publish.gradle'
 
 /**发布到GitHub Packages仓库**/
 def LIB_GROUP_ID = 'com.excellence'
